--- a/Transporte.html
+++ b/Transporte.html
@@ -2110,28 +2110,29 @@
                         <tr>
                             <td colspan="2">
                                 <div class="DivHotel">
-                                    <p class="PHotel1" style="margin-bottom: 0px;padding-bottom: 0px;">
-                                        Sabemos que algunos vienen de lejos o simplemente prefieren viajar sin
-                                        preocupaciones. Por eso, hemos organizado un <span
-                                            style="color: #e473b1;">servicio de transporte gratuito</span>
-                                        para acompañarte a nuestra celebración.
+                                    <p class="PHotel1" style="margin-bottom: 0px;padding-bottom: 0px;"><span
+                                            style="font-weight: bolder;">Viaja sin preocupaciones, nosotros te llevamos!
+                                        </span>
+                                        <br><br>
+                                        Para tu comodidad y seguridad, hemos dispuesto un <span
+                                            style="color: #e473b1;">servicio de transporte sin costo</span> que te
+                                        llevará directamente a nuestra celebración.
                                         <br><br>
                                         El traslado será cómodo y seguro, <span style="color: #e473b1;">saliendo desde
                                             Antara Polanco, CDMX</span> el 12 de
                                         diciembre, y regresando el 14 de Diciembre.
                                         <br><br>
-                                        ¡Así podrás relajarte y disfrutar del viaje desde el primer momento!
-                                        <br><br>
+                                        Para apartar tu lugar, solo tienes que registrarte en el formulario que
+                                        encontrarás más abajo.
                                         <br><br>
                                         <span
                                             style="font-weight: bolder; padding: 5% 0; color: #fcc85e; line-height: 2.2em">¡IMPORTANTE
                                             ESTA OPCIÓN ES
                                             EXCLUSIVA PARA QUIENES SE HOSPEDEN EN EL HOTEL QUINTA MINA!</span>
                                         <br><br>
-                                        <br><br>
                                     </p>
                                 </div>
-                                                                <div class="SprigatitoDiv">
+                                <div class="SprigatitoDiv">
                                     <img class="SprigatitoIMG1" src="./Transporte1.gif" alt="" srcset="">
                                     <img class="SprigatitoIMG" src="./Transporte2.gif" alt="" srcset="">
                                 </div>
