--- a/index.html
+++ b/index.html
@@ -2170,7 +2170,7 @@
                             <td class="">
                                 <div class="Texto">
                                     <h3>
-                                        Queremos hacer tu viaje lo más <span
+                                        Queremos hacer tu viaje lo mas <span
                                             style="color: rgb(225, 150, 191);">comodo</span> posible. Haz clic para
                                         conocer las
                                         opciones de transporte y alojamiento que hemos preparado para ti.
@@ -2795,15 +2795,6 @@
                                         </div>
 
                                         <div class="faq-item" onclick="toggleFaq(this)">
-                                            <div class="faq-question">¿Hay Parking en el lugar?</div>
-                                            <div class="faq-toggle">+</div>
-                                        </div>
-                                        <div class="faq-answer">
-                                            <p>¡Sí!, Habrá <span style="color: #e473b1;">valet parking gratuito</span>
-                                                en el lugar. ¡Así podrán divertirse sin preocuparse por nada!</p>
-                                        </div>
-
-                                        <div class="faq-item" onclick="toggleFaq(this)">
                                             <div class="faq-question">¿Cuál será el itinerario del evento?</div>
                                             <div class="faq-toggle">+</div>
                                         </div>
@@ -2814,6 +2805,16 @@
                                                     actualizaciones</span> en esta misma
                                                 página.</p>
                                         </div>
+
+                                        <div class="faq-item" onclick="toggleFaq(this)">
+                                            <div class="faq-question">¿Hay Parking en el lugar?</div>
+                                            <div class="faq-toggle">+</div>
+                                        </div>
+                                        <div class="faq-answer">
+                                            <p>¡Sí!, Habrá <span style="color: #e473b1;">valet parking gratuito</span>
+                                                en el lugar. ¡Así podrán divertirse sin preocuparse por nada!</p>
+                                        </div>
+
 
                                         <div class="faq-item" onclick="toggleFaq(this)">
                                             <div class="faq-question">¿Puedo llevar a alguien?</div>
