--- a/index.html
+++ b/index.html
@@ -1341,6 +1341,9 @@
 
     @media screen and (max-width: 768px) {
 
+        .popup{
+            margin: 5%;
+        }
 
         .MainTxt {
             font-size: 40px;
@@ -2569,9 +2572,9 @@
                                     <p class="TextoCuenta">
                                         <span>Datos para tu depósito de <br>Pokemonedas</span> <br>
                                         (en otras monedas)<br><br>
-                                        Banco: Banco de Aventura <br><br>
-                                        Cuenta Clave: 12345678 <br><br>
-                                        Titular: Ash Ketchup <br><br>
+                                        Banco: Wise <br><br>
+                                        IBAN: BE93 9679 0513 6567<br><br>
+                                        Titular: Jesús Eduardo Téllez Luna <br><br>
                                     </p>
                                     <div class="PusheenDiv">
                                         <img class="Maltese1IMG" src="./GiveMeTheMoney1.gif" alt="" style="width: 15%;">
