--- a/index.html
+++ b/index.html
@@ -1878,7 +1878,9 @@
         <div class="popup">
             <h1>🎉 Bienvenidos</h1>
             <p>
-                Aquí encontrarás toda la información importante:
+                Con muchísima ilusión, hemos creado esta página. Aquí encontrarás toda la información
+                importante:
+                <br>
                 <br>
                 📍 El lugar de la boda
                 <br>
@@ -2201,7 +2203,7 @@
                                     <h2 class="H2Donde">¿Donde? <span><a
                                                 href="https://maps.app.goo.gl/1WXCSaaM65sEmmF76"
                                                 style="color:#fcc85e">Ver
-                                                Mapa</a></span> <br>Jardín Santa Bárbara</h2>
+                                                Mapa</a></span> <br>Jardin Santa Bárbara</h2>
                                 </div>
                             </td>
                         </tr>
@@ -2577,9 +2579,9 @@
                                     <p class="TextoCuenta">
                                         <span>Datos para tu depósito de <br>Pokemonedas</span><br>
                                         (en MXN)<br><br>
-                                        Banco: Banco de Aventura <br><br>
+                                        Banco: Nu <br><br>
                                         Cuenta Clave: 12345678 <br><br>
-                                        Titular: Ash Ketchup <br><br>
+                                        Titular: Karla Daniela Barajas Hernández <br><br>
                                     </p>
                                     <div class="Separador"></div>
 
